<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="stIOoutput" Id="{3ce7cfbf-ad1e-4b01-89d9-bfe3048b6d80}">
    <Declaration><![CDATA[TYPE stIOoutput :
STRUCT
// ~~~~~ Output Signals ~~~~~
	// Drive CoE
	coeProbingCycleCommand	: WORD;
	coeProbe1Enable			: WORD;
	
	// Hardware Signals
	Rack1Slot2				: EL1008;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>