<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="gvlIO" Id="{ec8b3721-9de7-4a16-b80d-24d091a4ea63}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	/// Inputs
	stInputs	:	stIOinput;
	/// Outputs
	stOutputs	: 	stIOoutput;
	
	bHomeSwitch: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>